<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_request" />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_offer"
            android:title="@string/nav_offers" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/nav_messages" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_credit"
            android:title="@string/nav_payment" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_track"
            android:title="Track" />



        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_policies"
            android:title="Policies" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_btn_logout"
            android:title="Logout" />



    </group>

</menu>
